# fastapi-task-tracker

./: docker-compose.yml
user_service/: main.py  pyproject.toml
user_service/app/: main.py
user_service/app/api/: auth.py
user_service/app/config/: config.py  database.py
user_service/app/core/: security.py
user_service/app/dependencies/: auth.py
user_service/app/migration/: env.py
user_service/app/migration/versions/: 11f9791cb0ca_upd_relationships.py  157242c9489f_user_profile_relationship_v2.py  2cf6fc1ba51c_user_profile_relationship_v3.py  400691b89c23_user_profile_relationship.py  62dec190ee1f_user_profile_relationship_v4.py  ab9eb71a1ae5_change_password_column.py  c64009570f71_initial_revision.py  e939140b23bd_upd_uniqueconstraint.py
user_service/app/models/: __init__.py  oauth_accounts.py  profile.py  profiles.py  user.py  users.py
user_service/app/repositories/: users.py
user_service/app/schemas/: user.py
user_service/app/services/: auth.py
